# bmad-autopilot

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  bmad-autopilot.sh  bmad-phase.sh  bmad-setup.sh  pyproject.toml
bmad_mcp/: __init__.py  llm.py  project.py  server.py  sprint.py
bmad_mcp/auto_fix/: __init__.py  config.py  engine.py  models.py  modifier.py  parser.py  reporter.py  safety.py  validator.py
bmad_mcp/auto_fix/strategies/: __init__.py  base.py  formatting.py
bmad_mcp/context/: __init__.py  config.py  indexer.py  models.py  parser.py  regex_parser.py  retriever.py  scanner.py  search.py  storage.py
bmad_mcp/phases/: __init__.py  create.py  develop.py  execute.py  plan.py  review.py
bmad_mcp/planning/: __init__.py  generator.py  validator.py
bmad_mcp/planning/templates/: design-plan.md.j2
docs/: ADVERSARIAL_REVIEW_REPORT.md  adversarial-review-prompt-6-1.md  adversarial-review-prompt.md  epics.md
docs/plans/: 2026-01-14-mcp-server-design.md
docs/sprint-artifacts/: 6-1-auto-fix.md  6-2-dynamic-context.md  6-2-review.md  6-3-design-plan.md  sprint-status.yaml
docs/sprint-artifacts/6-3-design-plan/: design-plan.md
skills/: dev-story.md
tests/: __init__.py  test_auto_fix.py  test_auto_fix_advanced.py  test_context.py  test_context_advanced.py  test_planning.py  test_review.py  test_server.py  test_sprint.py
